--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2em;
   text-align: center;
 }
 
@@ -27,3 +26,8 @@ ul, li {
 }
 
 
+@media (min-width: 480px){
+  #root {
+  padding: 2em;
+  }
+}
